# rag-llm-pdf-reader

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/: routes.py  schemas.py
app/core/: logging.py
app/embeddings/: embedder.py  st_embedder.py
app/ingestion/: base.py  ingestor.py  local_file.py  local_text.py  pipeline.py
app/llm/: llama_cpp.py
app/processing/: chunker.py
app/prompts/: rag_prompt.py
app/qa/: service.py
app/retrieval/: service.py
app/vectorstore/: base.py  qdrant.py
