[project]
name = "rag-llm-pdf-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "llama-cpp-python>=0.3.16",
    "pdfplumber>=0.11.8",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]
